# cc-plugins

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/commands/: create-plugin.md  test-plugin.md  validate-deps.md
.claude/skills/hooks-framework/: SKILL.md
.github/workflows/: test-brainworm.yml
brainworm/: CHANGELOG.md  CLAUDE.md  DEPENDENCIES.md  README.md
brainworm/.claude-plugin/: metadata.toml  plugin.json
brainworm/agents/: code-review.md  context-gathering.md  context-refinement.md  logging.md  service-documentation.md  session-docs.md
brainworm/commands/: add-trigger.md  api-mode.md  daic.md  install-brainworm.md
brainworm/docs/: ANALYTICS.md  ARCHITECTURE.md  CONFIGURATION.md  DAIC_WORKFLOW.md  END_USER_GUIDE.md  FAIL_FAST_ARCHITECTURE.md  GOVERNANCE.md  HOOK_TYPES_EDGE_CASE_TESTING.md  MISSING_DEPENDENCY_FIX.md  MONOREPO_TEST_FINDINGS.md  NAUTILOID_INTEGRATION.md  NAUTILOID_METRICS_RESPONSE.md  POST_TOOL_USE_FINDINGS.md  PROCESS_FLOWS.md  README.md  STATE_FILE_MANAGEMENT.md  TEST_MONOREPO_PLAN.md  cli-reference.md  contributing.md  daic-workflow.md  getting-started.md  protocols-and-agents.md  reference.md  task-management.md  troubleshooting.md
brainworm/hooks/: api_mode.py  create_task.py  hooks.json  notification.py  post_tool_use.py  pre_compact.py  pre_tool_use.py  raw_data_capture.py  session_end.py  session_start.py  statusline-script.py  stop.py  subagent_stop.py  tasks_command.py  transcript_processor.py  update_daic_mode.py  user_prompt_submit.py  view_analytics.py
brainworm/protocols/: task-startup.md
brainworm/scripts/: add_trigger.py  api_mode.py  create_task.py  daic_command.py  install_project.py  list_tasks.py  statusline-script.py  switch_task.py  tasks_command.py  update_daic_mode.py  update_session_correlation.py  update_task_state.py  validate_dependencies.py  verify_duration_tracking.py  wait_for_transcripts.py
brainworm/templates/: CLAUDE.sessions.md  TEMPLATE.md  config.toml.template  user-config.json
brainworm/utils/: __init__.py  analysis_utils.py  analytics_processor.py  bash_validator.py  business_controllers.py  config.py  correlation_manager.py  daic_state_manager.py  debug_logger.py  event_logger.py  event_store.py  file_manager.py  git.py  git_submodule_manager.py  github_integration.py  hook_analytics.py  hook_framework.py  hook_logging.py  hook_types.py  input_handling.py  project.py  security_validators.py  sqlite_manager.py  transcript_parser.py
mcp-servers/: CHANGELOG.md  CLAUDE.md  LICENSE  README.md
mcp-servers/.claude-plugin/: plugin.json
tests/: __init__.py
tests/brainworm/: README.md  __init__.py  conftest.py
(+76 files in other folders)
