[project]
name = "cc-plugins"
version = "0.1.0"
description = "Claude Code plugins marketplace"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brainworm"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "rich>=13.0.0",
    "tomli-w>=1.0.0",
    "psutil>=5.9.0",
    "typer>=0.9.0",
    "filelock>=3.13.0",
    "tiktoken>=0.7.0",
    "pendulum>=3.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E501",   # Line too long (we set line-length = 120)
    "N815",   # Variable in class scope should not be mixedCase (Claude Code API requires camelCase)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
pythonpath = ["."]
addopts = "-v --cov=brainworm --cov-report=term-missing"
